# ARES

./: README.md
Alpha/: .gitignore
Alpha/alpha-parallel/: AlphaTransform.py  AlphaTransformParallel.py  DenoiseUtility.py  MotherShearlets.py  PatchworkTransform.py  RotationPOUTransform.py
Alpha/notebook/: Alpha-Shearlets_Sphere_Tutorial.ipynb
DL/: .gitignore  CMakeLists.txt  DictionaryLearning.dox  README.md
DL/cmake/Modules/: FindArmadillo.cmake  FindAtlas.cmake  FindCFITSIO.cmake
DL/include/: ColorStructure.h  DLException.h  DataStructure.h  DictionaryInit.h  GenForwardBackward.h  GradOperators.h  OnlinePatchExtractor.hpp  OpenMPInterface.h  PatchExtractor.h  ProjOperators.h  ProxAlgos.h  ProxOperators.h  S1Decomposition.h  SparseProxOperators.h  TempArray.h  TempMemory.h  gslRNG.h
DL/notebook/: DL_Sphere_Tutorial.ipynb  launch_DL_Sphere_DustPatches.ipynb
DL/notebook/.ipynb_checkpoints/: launch_DL_Sphere_DustPatches-checkpoint.ipynb
DL/python/: extract_Dust_Regions.py  split_faces.py
DL/src/: DL_learning.cpp  DL_test_matrix_decomposition.cpp  Sparse_decomposition.cpp
DL/src/libdl/: DataStructure.cpp  DictionaryInit.cpp  DictionaryLearning.cpp  DictionaryLearning.h  MatrixDecomposition.cpp  MatrixDecomposition.h  MatrixL2Norm.tcc  OMPCoding.cpp  OMPCoding.h  PatchExtractor.cpp  PatchExtractor.hpp  SparseCoding.cpp  SparseCoding.h
DL/src/libtime/: CTimer.h  TimeInfoManager.cpp  TimeInfoManager.h  TimeInfoManager_Active.h  TimeInfoManager_Passive.h
DL/src/libtools/: Arr_Fits.cc  DefMath.cc  GetOpt.cc  GlobalInc.h  IM_Fits.cc  IM_IO.cc  IM_IO.h  IM_IODisp.cc  IM_IOTools.h  ISAP_verbose.hpp  MatrixOper.cc  OpenMPInterface.cc  myexit.cpp  myexit.hpp
data/: .gitignore  ffp8_thermaldust_nobpm_100_full_map_ns128.fits
